# ocrs

./: .atom-build.yml  .gitignore  BBS_CHECK_OCR.sql  CMakeLists.txt  CREATE_STREETNAME_WORDLIST.sql  ExtractAddress.cpp  ImageRecognize.cpp  ImageRecognize.h  Makefile  README.md  analyse.sh  bbs_check_id.sql  build.sh  create_db.sh  ddl.sql  ddl.sql-e  glob_posix.h  justify.md  linux.sh  linux_mysql.sh  moving_all.sh  moving_files.sh  my-patch.txt  ocrs.cpp  ocrsd.service  old.function.sql  prepare.sql  preview.cpp  proc_zipcode_correction.sql  regonize.sh  set_quick_table_sv.sql  set_sortbox.sql  set_sortbox_ext.sql  set_sortbox_ext_old_mysql.sql  set_sv.sql  sharpness.cpp  split.sql  stored_proc.sql  string_functions.sql  systemd.md  (+2 more)
debian/: changelog  control  files  install  ocrs.substvars  rules
new/: ExtractAddress.cpp  ExtractAddress.h  ImageRecognizeEx.cpp  ImageRecognizeEx.h  MC_Bereiche_PLZ.sql  Makefile  RegionOfInterest.cpp  RegionOfInterest.h  build-debian.sh  build_ex.sh  build_test.sh  cxxopts.hpp  glob_posix.cpp  hint.md  img2pgm  img2pgm.cpp  loop_folder.sh  ocr_ext.cpp  ocr_ext.h  ocrsex.cpp  recognize.sh  test_reg.cpp
new/debian/: changelog  control  copyright  debhelper-build-stamp  files
new/debian/patches/: add-script  extend-build-script  series
new/recognize/: barcode.cpp  barcode.cpp.bak  imageoperations.cpp  statistics.cpp  text.cpp  unpaper.cpp
new/recognize/imagecodes/: FindCodes.cpp  FindCodes.h  Makefile  imagecodes  imagecodes.cpp
sql/: 2017-12-sortbox_ext.sql  cleanstreetname.sql  fast_access_streethash.sql  loop_clear_street.sql  preparestreetname.sql  set_sv.sql
